k8s/traefik/nginx-ingress-route-example.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-test
  namespace: nginx-test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx-test.kube-dev.echopossum.com`)
      kind: Rule
      services:
        - name: nginx-test
          port: 80
